# cmake_test_example

./: CMakeLists.txt  README.md  class.cpp  class.h  main.cpp  prog.sh  test.sh
tests/: CMakeLists.txt  ClassTest.cpp
